--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^0.19.0",
     "mqtt": "^3.0.0",
     "pg": "^7.12.1",
     "pg-hstore": "^2.3.3",
